# gitlog

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/gitlog/: __init__.py  ai.py  cli.py  formatter.py  git.py
