[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlog"
version = "0.1.0"
description = "AI-powered conventional commit message and changelog generator"
authors = [{ name = "Kevin" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "anthropic>=0.109.1",
]

[project.scripts]
gitlog = "gitlog.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlog"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
